@@ -1,6 +1,7 @@
   - Integration with data structures of SOM libraries in Python, R, and MATLAB.
   - Persistent object in C++ to improve efficiency of wrappers.
   - Improve documentation of wrappers. Python documentation should go to https://readthedocs.org/.
+  - Pass a single-precision array from R without making a copy.
   - Upload to MATLAB FileExchange.
   - Implement hexagonal grid.
   - Reimplement GPU kernels in CUDA to replace Thrust (testing is currently in cuda_opt branch).
