@@ -1,4 +1,5 @@
 #include <Rcpp.h>
+#include <iostream>
 
 using namespace std;
 using namespace Rcpp;
@@ -12,9 +13,11 @@ RcppExport SEXP Rtrain(SEXP data_p,
                        SEXP radiusCooling_p,
                        SEXP scale0_p, SEXP scaleN_p,
                        SEXP scaleCooling_p,
-                       SEXP kernelType_p, SEXP mapType_p)
+                       SEXP kernelType_p, SEXP mapType_p,
+                       SEXP codebook_p)
 {
   Rcpp::NumericMatrix dataMatrix(data_p);
+  Rcpp::NumericVector codebook_vec(codebook_p);
   int nVectors = dataMatrix.rows();
   int nDimensions = dataMatrix.cols();
   int nEpoch = as<int>(nEpoch_p);
@@ -35,12 +38,19 @@ RcppExport SEXP Rtrain(SEXP data_p,
       for(int j = 0; j < nDimensions; j++){
           data[i * nDimensions + j] = (float) dataMatrix(i,j);
         }
-    }
-
+  }
   int codebook_size =  nSomY * nSomX * nDimensions;
+  float* codebook = new float[codebook_size];
+  for(int som_y = 0; som_y < nSomY; ++som_y){
+    for(int som_x = 0; som_x < nSomX; ++som_x){
+      for(int d = 0; d < nDimensions; ++d){
+        codebook[som_y*nSomX*nDimensions+som_x*nDimensions+d] = (float) codebook_vec(som_y*nSomX*nDimensions+som_x*nDimensions+d);
+      }
+    }
+  }
+
   int globalBmus_size = nVectors * 2;
   int uMatrix_size = nSomX * nSomY;
-  float* codebook = new float[codebook_size];
   int* globalBmus = new int[globalBmus_size];
   float* uMatrix = new float[uMatrix_size];
   train(data, data_length, nEpoch, nSomX, nSomY,
@@ -49,14 +59,17 @@ RcppExport SEXP Rtrain(SEXP data_p,
         kernelType, mapType,
         codebook, codebook_size, globalBmus, globalBmus_size,
         uMatrix, uMatrix_size);
-  Rcpp::NumericVector codebook_vec(codebook_size);
   Rcpp::NumericVector globalBmus_vec(globalBmus_size);
   Rcpp::NumericVector uMatrix_vec(uMatrix_size);
   if(codebook != NULL){
-      for(int i = 0; i < codebook_size; i++){
-          codebook_vec(i) = codebook[i];
+    for(int som_y = 0; som_y < nSomY; ++som_y){
+      for(int som_x = 0; som_x < nSomX; ++som_x){
+        for(int d = 0; d < nDimensions; ++d){
+          codebook_vec(som_y*nSomX*nDimensions+som_x*nDimensions+d) = codebook[som_y*nSomX*nDimensions+som_x*nDimensions+d];
         }
+      }
     }
+  }
   if(globalBmus != NULL){
       for(int i = 0; i < globalBmus_size; i++){
           globalBmus_vec(i) = globalBmus[i];
