@@ -1,4 +1,5 @@
 Since 1.4.1:
+  - New: Python and R interfaces now allow passing an initial codebook.
   - Changed: Reduced memory use in calculating U-matrices.
 
 Version 1.4.1: 2015-01-28
